add forgotten packages

--- a/pixi.toml
+++ b/pixi.toml
@@ -16,3 +16,5 @@ python = "3.13.*"
 sphinx-design = ">=0.6.1,<0.7"
 sphinx-copybutton = ">=0.5.2,<0.6"
 sphinx-codeautolink = ">=0.17.5,<0.18"
+sphinx-remove-toctrees = ">=1.0.0.post1,<2"
+sphinxext-opengraph = ">=0.13.0,<0.14"
