add jupyterlab-myst to the dev deps

--- a/pixi.toml
+++ b/pixi.toml
@@ -28,6 +28,7 @@ jupyterlab_code_formatter = "*"
 black = "*"
 isort = "*"
 sphinx-autobuild = ">=2024.10.3,<2025"
+jupyterlab-myst = ">=2.4.2,<3"
 
 [feature.dev.tasks]
 sphinx-autobuild = { cmd = "sphinx-autobuild -b html -W -n --open-browser . _build", cwd = "docs" }
