use the correct command name

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -19,7 +19,7 @@ build:
       - pixi install
     build:
       html:
-        - pixi run build-docs-rtd
+        - pixi run build-rtd
 
 sphinx:
   configuration: docs/conf.py
