add `h5netcdf` and `pooch` to the docs deps

--- a/pixi.toml
+++ b/pixi.toml
@@ -21,6 +21,8 @@ sphinx-remove-toctrees = ">=1.0.0.post1,<2"
 sphinxext-opengraph = ">=0.13.0,<0.14"
 healpix-geo = ">=0.0.6,<0.0.7"
 xdggs = ">=0.2.2,<0.3"
+h5netcdf = ">=1.6.4,<2"
+pooch = ">=1.8.2,<2"
 
 [feature.dev.dependencies]
 jupyterlab = "*"
